<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frm"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/profilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/profile" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/kelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelas"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nim"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/ref1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link1"
        android:textSize="12sp"
        android:textColorLink="#2551F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref" />

    <TextView
        android:id="@+id/ref2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link2"
        android:textSize="12sp"
        android:textColorLink="#2551F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref1" />

    <TextView
        android:id="@+id/ref3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link3"
        android:textSize="12sp"
        android:textColorLink="#2551F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref2" />

    <TextView
        android:id="@+id/ref4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link4"
        android:textSize="12sp"
        android:textColorLink="#2551F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref3" />

    <TextView
        android:id="@+id/ref5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link5"
        android:textSize="12sp"
        android:textColorLink="#2551F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref4" />

    <TextView
        android:id="@+id/ref6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link6"
        android:textSize="12sp"
        android:textColorLink="#2551F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref5" />

    <TextView
        android:id="@+id/ref7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link7"
        android:textSize="12sp"
        android:textColorLink="#2551F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref6" />

    <TextView
        android:id="@+id/ref8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link8"
        android:textSize="12sp"
        android:textColorLink="#2551F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref7" />

    <TextView
        android:id="@+id/ref9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link9"
        android:textSize="12sp"
        android:textColorLink="#2551F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref8" />

</androidx.constraintlayout.widget.ConstraintLayout>